# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[workspace]
members = [
  "tvm-sys",
  "tvm-macros",
  "tvm-rt",
  "tvm",
  "tvm/tests/basics",
  "tvm/tests/callback",
  "tvm/examples/resnet",
  "tvm-graph-rt",
  "tvm-graph-rt/tests/test_tvm_basic",
  "tvm-graph-rt/tests/test_tvm_dso",
  "tvm-graph-rt/tests/test_nn",
  "compiler-ext",
]

[workspace.dependencies]
anyhow = "^1.0"
ar = "0.9"
codespan-reporting = "0.11"
crossbeam-channel = "0.5"
csv = "1.1"
enumn = "^0.1"
goblin = "^0.6"
image = "0.24"
itertools = "0.10"
lazy_static = "1.4"
mashup = "0.1"
memoffset = "0.7"
ndarray = "0.15"
nom = "7.0"
num-traits = "0.2"
num_cpus = "1.14"
once_cell = "^1.3.1"
paste = "1.0"
proc-macro-error = "^1.0"
proc-macro2 = "^1.0"
quote = "^1.0"
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
structopt = {version = "0.3"}
syn = {version = "1.0.48", features = ["full", "parsing", "extra-traits"]}
thiserror = "^1.0"
tracing = "^0.1"

# build-dependencies
bindgen = {version = "0.63", default-features = false, features = ["runtime"]}
tvm-build = "0.2.4"

# specific target dependencies (see tvm-graph-rt)
libloading = "0.7"

# optional used in rust/tvm
pyo3 = "^0.17"
