# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
authors = ["TVM Contributors"]
categories = ["api-bindings", "science"]
description = "Rust bindings for the TVM runtime API."
edition = "2021"
homepage = "https://github.com/apache/tvm"
keywords = ["rust", "tvm"]
license = "Apache-2.0"
name = "tvm-rt"
readme = "README.md"
repository = "https://github.com/apache/tvm"
version = "0.1.0-alpha"

[features]
blas = ["ndarray/blas"]
default = ["dynamic-linking"]
dynamic-linking = ["tvm-sys/dynamic-linking"]
runtime-only = ["tvm-sys/runtime-only"]
standalone = ["tvm-sys/runtime-only"]
static-linking = ["tvm-sys/static-linking"]
# Enabling any of the following features is like setting the value to "ON" in config.cmake.
build-static-runtime = ["tvm-sys/build-static-runtime"]
hide-private-symbols = ["tvm-sys/hide-private-symbols"]
use-arm-compute-lib = ["tvm-sys/use-arm-compute-lib"]
use-arm-compute-lib-graph-runtime = ["tvm-sys/use-arm-compute-lib-graph-runtime"]
use-byodt-posit = ["tvm-sys/use-byodt-posit"]
use-coreml = ["tvm-sys/use-coreml"]
use-cpp-rpc = ["tvm-sys/use-cpp-rpc"]
use-cublas = ["tvm-sys/use-cublas"]
use-cuda = ["tvm-sys/use-cuda"]
use-cudnn = ["tvm-sys/use-cudnn"]
use-dnnl-codegen = ["tvm-sys/use-dnnl-codegen"]
use-ethosn = ["tvm-sys/use-ethosn"]
use-fallback-stl-map = ["tvm-sys/use-fallback-stl-map"]
use-graph-runtime = ["tvm-sys/use-graph-runtime"]
use-graph-runtime-debug = ["tvm-sys/use-graph-runtime-debug"]
use-hexagon-device = ["tvm-sys/use-hexagon-device"]
use-index-default-i64 = ["tvm-sys/use-index-default-i64"]
use-install-dev = ["tvm-sys/use-install-dev"]
use-llvm = ["tvm-sys/use-llvm"]
use-metal = ["tvm-sys/use-metal"]
use-micro = ["tvm-sys/use-micro"]
use-micro-standalone-runtime = ["tvm-sys/use-micro-standalone-runtime"]
use-miopen = ["tvm-sys/use-miopen"]
use-mkl = ["tvm-sys/use-mkl"]
use-mkldnn = ["tvm-sys/use-mkldnn"]
use-mscv-mt = ["tvm-sys/use-mscv-mt"]
use-nnpack = ["tvm-sys/use-nnpack"]
use-opencl = ["tvm-sys/use-opencl"]
use-openmp = ["tvm-sys/use-openmp"]
use-random = ["tvm-sys/use-random"]
use-relay-debug = ["tvm-sys/use-relay-debug"]
use-rocblas = ["tvm-sys/use-rocblas"]
use-rocm = ["tvm-sys/use-rocm"]
use-rpc = ["tvm-sys/use-rpc"]
use-rtti = ["tvm-sys/use-rtti"]
use-sort = ["tvm-sys/use-sort"]
use-stackvm-runtime = ["tvm-sys/use-stackvm-runtime"]
use-target-onnx = ["tvm-sys/use-target-onnx"]
use-tensorrt-codegen = ["tvm-sys/use-tensorrt-codegen"]
use-tensorrt-runtime = ["tvm-sys/use-tensorrt-runtime"]
use-tf-tvmdsoop = ["tvm-sys/use-tf-tvmdsoop"]
use-tflite = ["tvm-sys/use-tflite"]
use-threads = ["tvm-sys/use-threads"]
use-thrust = ["tvm-sys/use-thrust"]
use-vitis-ai = ["tvm-sys/use-vitis-ai"]
use-vulkan = ["tvm-sys/use-vulkan"]

[dependencies]
mashup = {workspace = true}
memoffset = {workspace = true}
ndarray = {workspace = true}
num-traits = {workspace = true}
once_cell = {workspace = true}
paste = {workspace = true}
thiserror = {workspace = true}
tvm-macros = {path = "../tvm-macros"}

[dependencies.tvm-sys]
default-features = false
path = "../tvm-sys/"

[dev-dependencies]
anyhow = {workspace = true}
