# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
authors = ["TVM Contributors"]
description = "Low level bindings to TVM's cross language API."
edition = "2021"
license = "Apache-2.0"
name = "tvm-sys"
version = "0.1.1-alpha"

[features]
default = ["dynamic-linking"]
dynamic-linking = []
runtime-only = []
static-linking = []
# Enabling any of the following features is like setting the value to "ON" in config.cmake.
build-static-runtime = []
hide-private-symbols = []
use-arm-compute-lib = []
use-arm-compute-lib-graph-runtime = []
use-byodt-posit = []
use-coreml = []
use-cpp-rpc = []
use-cublas = []
use-cuda = []
use-cudnn = []
use-dnnl-codegen = []
use-ethosn = []
use-fallback-stl-map = []
use-graph-runtime = []
use-graph-runtime-debug = []
use-hexagon-device = []
use-index-default-i64 = []
use-install-dev = []
use-llvm = []
use-metal = []
use-micro = []
use-micro-standalone-runtime = []
use-miopen = []
use-mkl = []
use-mkldnn = []
use-mscv-mt = []
use-nnpack = []
use-opencl = []
use-openmp = []
use-random = []
use-relay-debug = []
use-rocblas = []
use-rocm = []
use-rpc = []
use-rtti = []
use-sort = []
use-stackvm-runtime = []
use-target-onnx = []
use-tensorrt-codegen = []
use-tensorrt-runtime = []
use-tf-tvmdsoop = []
use-tflite = []
use-threads = []
use-thrust = []
use-vitis-ai = []
use-vulkan = []

[dependencies]
anyhow = {workspace = true}
enumn = {workspace = true}
ndarray = {workspace = true}
thiserror = {workspace = true}

[build-dependencies]
anyhow = {workspace = true}
bindgen = {workspace = true}
tvm-build = {workspace = true}
