# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
authors = ["TVM Contributors"]
categories = ["api-bindings", "science"]
description = "Rust frontend support for TVM"
edition = "2021"
homepage = "https://github.com/apache/tvm"
keywords = ["rust", "tvm"]
license = "Apache-2.0"
name = "tvm"
readme = "README.md"
repository = "https://github.com/apache/tvm"
version = "0.1.1-alpha"

[features]
blas = ["ndarray/blas"]
default = ["python", "dynamic-linking"]
dynamic-linking = ["tvm-rt/dynamic-linking"]
python = ["pyo3"]
static-linking = ["tvm-rt/static-linking"]
# Enabling any of the following features is like setting the value to "ON" in config.cmake.
hide-private-symbols = ["tvm-rt/hide-private-symbols"]
use-arm-compute-lib = ["tvm-rt/use-arm-compute-lib"]
use-arm-compute-lib-graph-runtime = ["tvm-rt/use-arm-compute-lib-graph-runtime"]
use-byodt-posit = ["tvm-rt/use-byodt-posit"]
use-coreml = ["tvm-rt/use-coreml"]
use-cpp-rpc = ["tvm-rt/use-cpp-rpc"]
use-cublas = ["tvm-rt/use-cublas"]
use-cuda = ["tvm-rt/use-cuda"]
use-cudnn = ["tvm-rt/use-cudnn"]
use-dnnl-codegen = ["tvm-rt/use-dnnl-codegen"]
use-ethosn = ["tvm-rt/use-ethosn"]
use-fallback-stl-map = ["tvm-rt/use-fallback-stl-map"]
use-graph-runtime = ["tvm-rt/use-graph-runtime"]
use-graph-runtime-debug = ["tvm-rt/use-graph-runtime-debug"]
use-hexagon-device = ["tvm-rt/use-hexagon-device"]
use-index-default-i64 = ["tvm-rt/use-index-default-i64"]
use-install-dev = ["tvm-rt/use-install-dev"]
use-llvm = ["tvm-rt/use-llvm"]
use-metal = ["tvm-rt/use-metal"]
use-micro = ["tvm-rt/use-micro"]
use-micro-standalone-runtime = ["tvm-rt/use-micro-standalone-runtime"]
use-miopen = ["tvm-rt/use-miopen"]
use-mkl = ["tvm-rt/use-mkl"]
use-mkldnn = ["tvm-rt/use-mkldnn"]
use-mscv-mt = ["tvm-rt/use-mscv-mt"]
use-nnpack = ["tvm-rt/use-nnpack"]
use-opencl = ["tvm-rt/use-opencl"]
use-openmp = ["tvm-rt/use-openmp"]
use-random = ["tvm-rt/use-random"]
use-relay-debug = ["tvm-rt/use-relay-debug"]
use-rocblas = ["tvm-rt/use-rocblas"]
use-rocm = ["tvm-rt/use-rocm"]
use-rpc = ["tvm-rt/use-rpc"]
use-rtti = ["tvm-rt/use-rtti"]
use-sort = ["tvm-rt/use-sort"]
use-stackvm-runtime = ["tvm-rt/use-stackvm-runtime"]
use-target-onnx = ["tvm-rt/use-target-onnx"]
use-tensorrt-codegen = ["tvm-rt/use-tensorrt-codegen"]
use-tensorrt-runtime = ["tvm-rt/use-tensorrt-runtime"]
use-tf-tvmdsoop = ["tvm-rt/use-tf-tvmdsoop"]
use-tflite = ["tvm-rt/use-tflite"]
use-threads = ["tvm-rt/use-threads"]
use-thrust = ["tvm-rt/use-thrust"]
use-vitis-ai = ["tvm-rt/use-vitis-ai"]
use-vulkan = ["tvm-rt/use-vulkan"]

[dependencies.tvm-rt]
default-features = false
path = "../tvm-rt/"

[dependencies]
anyhow = {workspace = true}
codespan-reporting = {workspace = true}
lazy_static = {workspace = true}
mashup = {workspace = true}
ndarray = {workspace = true}
num-traits = {workspace = true}
once_cell = {workspace = true}
paste = {workspace = true}
pyo3 = {workspace = true, optional = true}
structopt = {workspace = true}
thiserror = {workspace = true}
tracing = {workspace = true}

tvm-macros = {path = "../tvm-macros/"}

[[bin]]
name = "tyck"
required-features = ["dynamic-linking"]
